test/fail_compilation/fail6572.d
// REQUIRED_ARGS:

typedef int y;
